--- a/build.xml
+++ b/build.xml
@@ -130,6 +130,62 @@
     </jar>
   </target>
 
+
+	  <target name="jar-complete" depends="serialize" description="Create the jruby.jar file">
+	    <jar destfile="${lib.dir}/jruby.jar">
+	      <fileset dir="${jruby.classes.dir}">
+	        <include name="**/*.class"/>
+		<include name="**/*.properties"/>
+		<include name="**/*.rb.ast.ser"/>
+	        <exclude name="org/jruby/util/ant/**/*.class"/>
+	      </fileset>
+	        <fileset dir="${basedir}/lib/ruby/1.8">
+	          <include name="**/*.rb"/>
+	        </fileset>
+	      <manifest>
+	        <attribute name="Built-By" value="${user.name}"/>
+	        <attribute name="Main-Class" value="org.jruby.Main"/>
+	      </manifest>
+	    </jar>
+	  </target>
+
+
+
+	  <target name="jar-applet" depends="serialize" description="Create the jruby.jar file">
+	    <jar destfile="${lib.dir}/jruby-applet.jar">
+	      <fileset dir="${jruby.classes.dir}">
+	        <include name="**/*.class"/>
+		<include name="**/*.properties"/>
+		<include name="**/*.rb.ast.ser"/>
+	        <exclude name="org/jruby/util/ant/**/*.class"/>
+	      </fileset>
+	        <fileset dir="${basedir}/lib/ruby/1.8">
+	          <include name="**/*.rb"/>
+		          <exclude name="**/rdoc/**"/>
+		          <exclude name="**/cgi/**"/>
+		          <exclude name="**/bigdecimal/**"/>
+		          <exclude name="**/drb/**"/>
+		          <exclude name="**/io/**"/>
+		          <exclude name="**/net/**"/>
+		          <exclude name="**/racc/**"/>
+		          <exclude name="**/rexml/**"/>
+		          <exclude name="**/rinda/**"/>
+		          <exclude name="**/runit/**"/>
+		          <exclude name="**/shell/**"/>
+		          <exclude name="**/soap/**"/>
+		          <exclude name="**/test/**"/>
+		          <exclude name="**/uri/**"/>
+		          <exclude name="**/webrick/**"/>
+		          <exclude name="**/xmlrpc/**"/>
+		          <exclude name="**/xsd/**"/>
+	        	
+	        </fileset>
+	      <manifest>
+	        <attribute name="Built-By" value="${user.name}"/>
+	      </manifest>
+	    </jar>
+	  </target>
+
   <target name="jar.standalone" depends="serialize, serialize.rubylib, jar"
 	  description="Create a standalone jruby.jar file using libraries from RUBY_HOME/lib/ruby/1.8"/>
 
