making complete target build a separate jar
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@2428 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -132,7 +132,7 @@
 
 
 	  <target name="jar-complete" depends="serialize" description="Create the jruby.jar file">
-	    <jar destfile="${lib.dir}/jruby.jar">
+	    <jar destfile="${lib.dir}/jruby-complete.jar">
 	      <fileset dir="${jruby.classes.dir}">
 	        <include name="**/*.class"/>
 		<include name="**/*.properties"/>
