--- a/build.xml
+++ b/build.xml
@@ -292,6 +292,7 @@
 
   <target name="test" depends="copy-test-files,instrument,run-junit,coverage-report"/>
   <target name="run-junit" description="runs junit tests">
+    <taskdef name="junit" classname="org.apache.tools.ant.taskdefs.optional.junit.JUnitTask" classpath="${lib.dir}/junit.jar"/>
     <junit fork="yes" haltonfailure="false" dir="${basedir}" maxmemory="256M">
       <classpath>
       	<pathelement location="${jruby.instrumented.classes.dir}" />
