committed a fix to clean for complete and applet jars
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@2527 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -377,6 +377,8 @@
     <delete dir="${build.dir}"/>
     <delete file="${lib.dir}/jruby.jar" quiet="true"/>
     <delete file="${lib.dir}/jruby-openssl.jar" quiet="true"/>
+    <delete file="${lib.dir}/jruby-complete.jar" quiet="true"/>
+    <delete file="${lib.dir}/jruby-applet.jar" quiet="true"/>
     <delete dir="${api.docs.dir}"/>
   </target>
 </project>
