--- a/build.xml
+++ b/build.xml
@@ -162,9 +162,11 @@
   </target>
 
 
-	  <target name="jar-complete" depends="serialize" description="Create the jruby.jar file">
+	  <target name="jar-complete" depends="serialize" description="Create the 'complete' JRuby jar. Pass 'mainclass' and 'filename' to adjust.">
+        <property name="mainclass" value="org.jruby.Main"/>
+        <property name="filename" value="jruby-complete.jar"/>
         <taskdef name="jarjar" classname="com.tonicsystems.jarjar.JarJarTask" classpath="${lib.dir}/jarjar-0.7.jar"/>
-	    <jarjar destfile="${lib.dir}/jruby-complete.jar">
+	    <jarjar destfile="${lib.dir}/${filename}">
 	      <fileset dir="${jruby.classes.dir}">
 	        <include name="**/*.class"/>
 		    <include name="**/*.properties"/>
@@ -181,29 +183,32 @@
           <zipfileset src="${lib.dir}/plaincharset.jar"/>
 	      <manifest>
 	        <attribute name="Built-By" value="${user.name}"/>
-	        <attribute name="Main-Class" value="org.jruby.Main"/>
+	        <attribute name="Main-Class" value="${mainclass}"/>
 	      </manifest>
 	    </jarjar>
 	  </target>
 
 
-
-	  <target name="jar-applet" depends="serialize" description="Create the jruby.jar file">
-	    <jar destfile="${lib.dir}/jruby-applet.jar">
+	  <target name="jar-light" depends="serialize" description="Create the 'light' JRuby jar. Pass 'mainclass' and 'filename' to adjust.">
+        <property name="mainclass" value="org.jruby.Main"/>
+        <property name="filename" value="jruby-light.jar"/>
+        <taskdef name="jarjar" classname="com.tonicsystems.jarjar.JarJarTask" classpath="${lib.dir}/jarjar-0.7.jar"/>
+	    <jarjar destfile="${lib.dir}/${filename}">
 	      <fileset dir="${jruby.classes.dir}">
 	        <include name="**/*.class"/>
-		<include name="**/*.properties"/>
-		<include name="**/*.rb.ast.ser"/>
+		    <include name="**/*.properties"/>
+		    <include name="**/*.rb.ast.ser"/>
 	        <exclude name="org/jruby/util/ant/**/*.class"/>
 	      </fileset>
-	        <fileset dir="${basedir}/lib/ruby/1.8">
-	          <include name="**/*.rb"/>
+	      <fileset dir="${basedir}/lib/ruby/1.8">
+	        <include name="**/*.rb"/>
 		          <exclude name="**/rdoc/**"/>
 		          <exclude name="**/cgi/**"/>
 		          <exclude name="**/bigdecimal/**"/>
 		          <exclude name="**/drb/**"/>
 		          <exclude name="**/io/**"/>
 		          <exclude name="**/net/**"/>
+		          <exclude name="**/openssl/**"/>
 		          <exclude name="**/racc/**"/>
 		          <exclude name="**/rexml/**"/>
 		          <exclude name="**/rinda/**"/>
@@ -215,12 +220,22 @@
 		          <exclude name="**/webrick/**"/>
 		          <exclude name="**/xmlrpc/**"/>
 		          <exclude name="**/xsd/**"/>
-	        	
-	        </fileset>
+	      </fileset>
+          <zipfileset src="${lib.dir}/jline-0.9.91-SNAPSHOT.jar"/>
+          <zipfileset src="${lib.dir}/jvyaml.jar"/>
+          <zipfileset src="${lib.dir}/plaincharset.jar"/>
 	      <manifest>
 	        <attribute name="Built-By" value="${user.name}"/>
+	        <attribute name="Main-Class" value="${mainclass}"/>
 	      </manifest>
-	    </jar>
+	    </jarjar>
+	  </target>
+
+	  <target name="jar-console" depends="serialize" description="Create the jruby graphical console jar">
+          <antcall target="jar-light">
+              <param name="mainclass" value="org.jruby.demo.IRBConsole"/>
+              <param name="filename" value="jruby-console.jar"/>
+          </antcall>
 	  </target>
 
   <target name="jar-openssl" depends="serialize,jar-jruby" if="build.openssl">
@@ -375,10 +390,9 @@
 
   <target name="clean" depends="init" description="clean almost everything">
     <delete dir="${build.dir}"/>
-    <delete file="${lib.dir}/jruby.jar" quiet="true"/>
-    <delete file="${lib.dir}/jruby-openssl.jar" quiet="true"/>
-    <delete file="${lib.dir}/jruby-complete.jar" quiet="true"/>
-    <delete file="${lib.dir}/jruby-applet.jar" quiet="true"/>
+    <delete quiet="false">
+        <fileset dir="${lib.dir}" includes="jruby*.jar"/>
+    </delete>
     <delete dir="${api.docs.dir}"/>
   </target>
 </project>
