--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
   <groupId>org.jruby</groupId>
   <artifactId>jruby</artifactId>
   <packaging>jar</packaging>
-  <version>0.9.1-SNAPSHOT</version>
+  <version>0.9.2-SNAPSHOT</version>
   <name>JRuby</name>
   <url>http://www.jruby.org/</url>
-  <description>A 1.8.2 compatible Ruby interpreter written in 100% pure Java</description>
+  <description>A 1.8.5 compatible Ruby interpreter written in 100% pure Java</description>
 
   <issueManagement>
     <system>JIRA</system>
@@ -79,6 +79,7 @@
       <groupId>bsf</groupId>
       <artifactId>bsf</artifactId>
       <version>2.3.0</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>ant</groupId>
@@ -89,17 +90,15 @@
     <dependency>
       <groupId>jvyaml</groupId>
       <artifactId>jvyaml</artifactId>
-      <version>1.0</version>
-      <scope>system</scope>
-      <systemPath>${basedir}/lib/jvyaml.jar</systemPath>
+      <version>0.2.1</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>asm</groupId>
       <artifactId>asm</artifactId>
       <version>2.2.2</version>
-      <scope>system</scope>
-      <systemPath>${basedir}/lib/asm-2.2.2.jar</systemPath>
-    </dependency>                                                                                                                                                          
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -199,3 +198,4 @@
     </plugins>
   </build>
 </project>
+
