Add bouncycastle by default Let Eclipse users no longer see red in their project Make build complete when being compiled with Java 1.4
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@2571 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -71,19 +71,25 @@
     <mkdir dir="${api.docs.dir}"/>
   </target>
 
-  <target name="check-for-optional-packages"
+  <target name="check-for-optional-java4-packages"
           description="check if specific libs and versions are avaiable"
           depends="init">
     <available property="jdk1.4+" classname="java.lang.CharSequence"/>
     <available property="jdk1.5+" classname="java.lang.StringBuilder"/>
     <available property="bsf.present" classname="org.apache.bsf.BSFManager"
                classpathref="build.classpath"/>
-    <available property="bc.present" classname="org.bouncycastle.jce.provider.BouncyCastleProvider"
-               classpathref="build.classpath"/>
     <available property="junit.present" classname="junit.framework.TestCase"
                classpathref="build.classpath"/>
     <available property="cglib.present" 
                classname="net.sf.cglib.reflect.FastClass"
+               classpathref="build.classpath"/>
+  </target>
+
+  <target name="check-for-optional-packages" if="jdk1.5+"
+          description="check if specific libs and versions are avaiable"
+          depends="check-for-optional-java4-packages">
+    <available property="bc.present" 
+               classname="org.bouncycastle.jce.provider.BouncyCastleProvider"
                classpathref="build.classpath"/>
     <condition property="build.openssl">
       <and>
