Fix for JRUBY-352, allows Maven 2 to build JRuby successfully again
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@2588 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>org.jruby</groupId>
   <artifactId>jruby</artifactId>
   <packaging>jar</packaging>
-  <version>0.9.2-SNAPSHOT</version>
+  <version>0.9.3-SNAPSHOT</version>
   <name>JRuby</name>
   <url>http://www.jruby.org/</url>
   <description>A 1.8.5 compatible Ruby interpreter written in 100% pure Java</description>
@@ -91,13 +91,35 @@
       <groupId>jvyaml</groupId>
       <artifactId>jvyaml</artifactId>
       <version>0.2.1</version>
-      <scope>provided</scope>
+      <scope>system</scope>
+      <systemPath>${basedir}/lib/jvyaml.jar</systemPath>
     </dependency>
     <dependency>
       <groupId>asm</groupId>
       <artifactId>asm</artifactId>
       <version>2.2.2</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>bouncycastle</groupId>
+      <artifactId>bcprov-jdk15</artifactId>
+      <version>134</version>
+      <scope>system</scope>
+      <systemPath>${basedir}/lib/bcprov-jdk15-134.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>bouncycastle</groupId>
+      <artifactId>bcmail-jdk15</artifactId>
+      <version>134</version>
+      <scope>system</scope>
+      <systemPath>${basedir}/lib/bcmail-jdk15-134.jar</systemPath>
+    </dependency>
+    <dependency>
+      <groupId>jline</groupId>
+      <artifactId>jline</artifactId>
+      <version>0.9.91-SNAPSHOT</version>
+      <scope>system</scope>
+      <systemPath>${basedir}/lib/jline-0.9.91-SNAPSHOT.jar</systemPath>
     </dependency>
   </dependencies>
 
@@ -175,7 +197,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <!-- surefire not working yet -->
-          <skip>true</skip>
+          <skip>true</skip> 
           <includes>
             <include>org/jruby/test/MainTestSuite.java</include>
           </includes>
