Fix for JRUBY-367 by Alexander
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@2628 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -344,8 +344,12 @@
           description="Creates the Java API docs">
     <javadoc destdir="${api.docs.dir}" author="true" version="true" use="true" 
              windowtitle="JRuby API" source="${javac.version}">
-      <fileset dir="${src.dir}"/>
-      <fileset dir="${test.dir}"/>
+      <fileset dir="${src.dir}">
+      	<include name="**/*.java"/>
+      </fileset>
+      <fileset dir="${test.dir}">
+		<include name="**/*.java"/>
+      </fileset>
       <doctitle><![CDATA[<h1>JRuby</h1>]]></doctitle>
       <bottom><![CDATA[<i>Copyright &#169; 2002-2006 JRuby Team. All Rights Reserved.</i>]]></bottom>
     </javadoc>
