- JRUBY-402: make sure profile is always active
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@2652 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/pom.xml
+++ b/pom.xml
@@ -164,12 +164,11 @@
     <profile>
       <id>jruby-properties</id>
       <activation>
-        <activeByDefault/>
+        <activeByDefault>true</activeByDefault>
       </activation>
       <properties>
         <jruby.package>org.jruby</jruby.package>
         <jruby.main.class>org.jruby.Main</jruby.main.class>
-        <jruby.src.root>${basedir}</jruby.src.root>
       </properties>
     </profile>
   </profiles>
