Added netbeans profiling target for local rake gem install
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@2653 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -405,4 +405,31 @@
     </delete>
     <delete dir="${api.docs.dir}"/>
   </target>
+  
+  <target name="profile-gem-install-rake" depends="jar" description="Profile a local gem installation of Rake">
+    <fail unless="netbeans.home">This target can only run inside the NetBeans IDE.</fail>
+
+    <nbprofiledirect>
+        <classpath> <pathelement location="... specify ..."/> </classpath>
+    </nbprofiledirect>
+
+    <java classname="org.jruby.Main" maxmemory="256M" fork="true">
+      <classpath>
+      	<pathelement location="${jruby.instrumented.classes.dir}" />
+        <path refid="build.classpath"/>
+        <pathelement path="${lib.dir}/jruby.jar"/>
+        <pathelement path="${test.classes.dir}"/>
+        <pathelement path="${test.dir}/requireTest.jar"/>
+      </classpath>
+      <jvmarg value="-Djruby.base=${basedir}"/>
+      <jvmarg value="-Djruby.home=${basedir}"/>
+      <jvmarg value="-Djruby.lib=${lib.dir}"/>
+      <jvmarg value="-Djruby.shell=/bin/sh"/>
+      <jvmarg value="-Djruby.script=jruby"/>
+      <jvmarg value="${profiler.info.jvmargs.agent}"/>
+      <arg value="bin/gem"/>
+      <arg value="install"/>
+      <arg value="lib/ruby/gems/1.8/cache/rake-0.7.1.gem"/>
+    </java>
+  </target>
 </project>
