--- a/build.xml
+++ b/build.xml
@@ -318,6 +318,7 @@
       <classpath>
       	<pathelement location="${jruby.instrumented.classes.dir}" />
         <path refid="build.classpath"/>
+        <pathelement path="${java.class.path}"/>
         <pathelement path="${lib.dir}/jruby.jar"/>
         <pathelement path="${test.classes.dir}"/>
         <pathelement path="${test.dir}/requireTest.jar"/>
