--- a/maven/jruby-rake-plugin/pom.xml
+++ b/maven/jruby-rake-plugin/pom.xml
@@ -8,10 +8,10 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jruby.plugins</groupId>
-  <artifactId>maven-jruby-plugin</artifactId>
+  <artifactId>jruby-rake-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   <version>0.9.3-SNAPSHOT</version>
-  <name>JRuby Plugin Maven Mojo</name>
+  <name>JRuby Rake Plugin</name>
   <dependencies>
     <dependency>
       <groupId>org.apache.maven</groupId>
