JRUBY-437: add jruby-rake-plugin to modules list
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@2743 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,7 @@
     <module>maven/jruby-jdk14</module>
     <module>maven/jruby</module>
     <module>maven/jruby-complete</module>
+    <module>maven/jruby-rake-plugin</module>
   </modules>
 
   <build>
