--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,7 @@
   </dependencies>
 
   <modules>
-    <module>maven/jruby-jdk14</module>
+    <!-- <module>maven/jruby-jdk14</module> -->
     <module>maven/jruby</module>
     <module>maven/jruby-complete</module>
     <module>maven/jruby-rake-plugin</module>
