--- a/maven/jruby-complete/pom.xml
+++ b/maven/jruby-complete/pom.xml
@@ -40,7 +40,6 @@
 
   <build>
     <sourceDirectory>${project.basedir}/../../src</sourceDirectory> 
-    <testSourceDirectory>${project.basedir}/../../test</testSourceDirectory> 
     <resources> 
       <resource> 
         <directory>${project.basedir}/../../src</directory> 
@@ -52,7 +51,6 @@
     </resources> 
     <plugins>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
           <source>1.5</source>
@@ -60,7 +58,12 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
+      <plugin>
         <artifactId>maven-antrun-plugin</artifactId>
         <executions>
           <execution>
