--- a/maven/jruby/pom.xml
+++ b/maven/jruby/pom.xml
@@ -93,15 +93,12 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
+          <skip>true</skip>
           <includes>
             <include>org/jruby/test/MainTestSuite.java</include>
             <include>org/jruby/test/ScriptTestSuite.java</include>
             <include>org/jruby/test/TestUnitTestSuite.java</include>
           </includes>
-          <systemProperties>
-            <jruby.home>${project.basedir}/../..</jruby.home>
-            <jruby.lib>${project.basedir}/../../lib</jruby.lib>
-          </systemProperties>
         </configuration>
       </plugin>
       <plugin>
