adding ASM to the light jar
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@2837 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -227,6 +227,7 @@
 		          <exclude name="**/xmlrpc/**"/>
 		          <exclude name="**/xsd/**"/>
 	      </fileset>
+          <zipfileset src="${lib.dir}/asm-2.2.2.jar"/>
           <zipfileset src="${lib.dir}/jline-0.9.91-SNAPSHOT.jar"/>
           <zipfileset src="${lib.dir}/jvyaml.jar"/>
           <zipfileset src="${lib.dir}/plaincharset.jar"/>
