--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,8 @@
 	<classpathentry kind="lib" path="lib/ant.jar"/>
 	<classpathentry kind="lib" path="lib/jvyaml.jar"/>
 	<classpathentry kind="lib" path="lib/plaincharset.jar"/>
-	<classpathentry kind="lib" path="lib/asm-2.2.2.jar"/>
+ 	<classpathentry kind="lib" path="lib/asm-commons-2.2.3.jar"/>
+ 	<classpathentry kind="lib" path="lib/asm-2.2.3.jar"/>
 	<classpathentry kind="lib" path="lib/jline-0.9.91-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/bcmail-jdk15-134.jar"/>
 	<classpathentry kind="lib" path="lib/bcprov-jdk15-134.jar"/>
