tell emma to merge results from multiple runs
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@2947 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -332,7 +332,7 @@
       <sysproperty key="jruby.home" value="${basedir}"/>
       <sysproperty key="jruby.lib" value="${lib.dir}"/>
       <sysproperty key="emma.coverage.out.file" value="${test.results.dir}/coverage.emma" />
-      <sysproperty key="emma.coverage.out.merge" value="false" />
+      <sysproperty key="emma.coverage.out.merge" value="true" />
 
       <formatter type="xml"/>
       <formatter type="brief" usefile="false"/>
