- JRUBY-506: attempt to improve ruby stack traces when printed out - add dependency on asm-commons
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@2953 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,13 @@
     <dependency>
       <groupId>asm</groupId>
       <artifactId>asm</artifactId>
-      <version>2.2.2</version>
+      <version>2.2.3</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>asm</groupId>
+      <artifactId>asm-commons</artifactId>
+      <version>2.2.3</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
