--- a/maven/jruby-complete/pom.xml
+++ b/maven/jruby-complete/pom.xml
@@ -175,7 +175,41 @@
               <goal>run</goal>
             </goals>
           </execution>
-        </executions>
+            <execution>
+              <id>tests</id>
+              <phase>test</phase>
+              <configuration>
+                <tasks>
+                  <mkdir dir="${project.build.directory}/surefire-reports"/>
+                  <taskdef name="junit" classname="org.apache.tools.ant.taskdefs.optional.junit.JUnitTask"
+                    classpathref="maven.plugin.classpath"/>
+                  <junit fork="yes" forkMode="once" haltonfailure="true" dir="${basedir}/../.." maxmemory="384M">
+                    <classpath refid="maven.test.classpath"/>
+                    <formatter type="xml"/>
+                    <formatter type="brief" usefile="false"/>
+                    <test name="org.jruby.test.MainTestSuite" todir="${project.build.directory}/surefire-reports"/>
+                    <test name="org.jruby.test.ScriptTestSuite" todir="${project.build.directory}/surefire-reports"/>
+                    <test name="org.jruby.test.TestUnitTestSuite" todir="${project.build.directory}/surefire-reports"/>
+                  </junit>
+                </tasks>
+              </configuration>
+              <goals>
+                <goal>run</goal>
+              </goals>
+            </execution>
+          </executions>
+          <dependencies>
+            <dependency>
+              <groupId>ant</groupId>
+              <artifactId>ant-junit</artifactId>
+              <version>1.6.5</version>
+            </dependency>
+            <dependency>
+              <groupId>junit</groupId>
+              <artifactId>junit</artifactId>
+              <version>3.8.1</version>
+            </dependency>
+          </dependencies>
       </plugin>
     </plugins>
   </build>
