YAML now uses bytes for loading. about 20-30% performance increase and 1/4:th memory usage.
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@2980 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -71,6 +71,17 @@
     <mkdir dir="${api.docs.dir}"/>
   </target>
 
+  <target name="ragel" description="Standalone target that generates all our ragel based source files. Requires ragel and rlcodegen to be on the classpath">
+    <exec executable="ragel" output="__ragel_out">
+      <arg line="-J"/>
+      <arg line="${src.dir}/org/jvyamlb/resolver_scanner.rl"/>
+    </exec>
+    <exec executable="rlcodegen" input="__ragel_out">
+      <arg line="-o ${src.dir}/org/jvyamlb/ResolverScanner.java"/>
+    </exec>
+    <delete file="__ragel_out"/>
+  </target>
+
   <target name="check-for-optional-java4-packages"
           description="check if specific libs and versions are avaiable"
           depends="init">
@@ -340,6 +351,7 @@
       <test name="org.jruby.test.MainTestSuite" todir="${test.results.dir}"/>
       <test name="org.jruby.test.ScriptTestSuite" todir="${test.results.dir}"/>
       <test name="org.jruby.test.TestUnitTestSuite" todir="${test.results.dir}"/>
+      <test name="org.jvyamlb.YAMLLoadTest" todir="${test.results.dir}"/>
     </junit>
 
     <junitreport todir="${test.results.dir}">
