--- a/.classpath
+++ b/.classpath
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry excluding="**/CVS/*" output="build/classes/test" kind="src" path="test"/>
+	<classpathentry excluding="**/CVS/*" kind="src" output="build/classes/test" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/bsf.jar"/>
 	<classpathentry kind="lib" path="lib/junit.jar"/>
 	<classpathentry kind="lib" path="lib/ant.jar"/>
-	<classpathentry kind="lib" path="lib/jvyaml.jar"/>
 	<classpathentry kind="lib" path="lib/plaincharset.jar"/>
- 	<classpathentry kind="lib" path="lib/asm-commons-2.2.3.jar"/>
- 	<classpathentry kind="lib" path="lib/asm-2.2.3.jar"/>
+	<classpathentry kind="lib" path="lib/asm-commons-2.2.3.jar"/>
+	<classpathentry kind="lib" path="lib/asm-2.2.3.jar"/>
 	<classpathentry kind="lib" path="lib/jline-0.9.91-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/bcmail-jdk15-134.jar"/>
 	<classpathentry kind="lib" path="lib/bcprov-jdk15-134.jar"/>
